--- a/manipulate/templates/publicNav.html
+++ b/manipulate/templates/publicNav.html
@@ -139,7 +139,10 @@
 <script src="/static/js/moment.min.js"></script>
 <script src="/static/echarts/echarts.min.js"></script>
 <script src="/static/js/chalk.js"></script>
-<script src="/static/js/echarts-2/build/dist/echarts.js"></script>
+
+<!-- <script src="/static/js/echarts-2/build/dist/echarts.js"></script> -->
+<script src="http://echarts.baidu.com/build/dist/echarts.js"></script>
+
 <script src="/static/echarts/china.js"></script>
 {% endblock %}
 
