--- a/manipulate/templates/backstage/setDetail/setDetail.html
+++ b/manipulate/templates/backstage/setDetail/setDetail.html
@@ -768,10 +768,9 @@
                                 { name: '股东减持', max: 1},
                                 { name: '股权质押', max: 1},
                                 { name: '市场消息', max: 1},
-                                { name: '利好公告', max: 1},
-                                // { name: '投资者\n异动', max: 1},
-                                { name: '投资者异动', max: 1},
+                                { name: '投资者\n异动', max: 1},
                                 { name: '财报异常', max: 1},
+                                { name: '利好公告', max: 1}
 
                             ],
                             name:{
@@ -801,7 +800,8 @@
                                     {
                                         // value: [57,38,40,52,94,14,72,26],
                                         // value: [0.75,0.5,0.25,0.95,0.95,0.9,0.9,0.9],
-                                        value: [0.75,0.5,0.25,0.95,0.9,0.9,0.9,0.9],
+                                        // value: [0.75,0.5,0.25,0.95,0.9,0.9,0.9,0.9],
+                                        value: [0.75,0.5,0.25,0.95,0.9,0.9,0.9,0.95],
                                         name: '风险值'
                                     },
                                 ]
