--- a/manipulate/templates/publicNav.html
+++ b/manipulate/templates/publicNav.html
@@ -70,8 +70,13 @@
         </h3>
     </div>
     <div class="nav_right" style="font-size: 0.14rem!important;margin-left: 0.2rem;">
-        <span class="login">登录</span>
-        <span class="registered">注册</span>
+        <span class="login">
+            <a href="/index/manage">登录</a>
+        </span>
+        <span class="registered">
+
+            <a href="/index/manage">注册</a>
+        </span>
     </div>
     <ul class="nav_middle">
 
