--- a/manipulate/templates/dashboard/cover.html
+++ b/manipulate/templates/dashboard/cover.html
@@ -25,8 +25,9 @@
         <div id="nav" style="position:fixed;">
             <div style="width: 100%;height: 100%;padding:0 0.2rem;">
                 <div class="nav_left">
-                    <h2 style="color:#fff;font-size: 0.36rem;font-weight:900;">
-                        <img src="/static/images/logo.png" style="width:1.4rem;height:0.9rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统
+                    <h2 style="color:rgb(108, 197, 255);font-size: 0.36rem;font-weight:900;">
+                        <!-- <img src="/static/images/logo.png" style="width:1.4rem;height:0.9rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统 -->
+                        <img src="/static/images/realLogo.png" style="height:0.9rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统
                     </h2>
                 </div>
                 <ul class="nav_middle">
@@ -47,7 +48,7 @@
                     </li>
                     <li class="main_li">
                         <a class="list_four li_a" href="/index/maniPulate">
-                            <i class="fa fa-compass"></i>&nbsp;业务系统
+                            <i class="fa fa-sign-in"></i>&nbsp;业务系统
                         </a>
                     </li>
                 </ul>
