--- a/manipulate/templates/dashboard/detect.html
+++ b/manipulate/templates/dashboard/detect.html
@@ -31,7 +31,7 @@
         <div id="nav">
             <div style="width: 100%;height: 100%;padding:0 0.2rem;"><!--background:rgba(6, 11, 23, 0.68);-->
                 <div class="nav_left">
-                    <h2 style="color:#fff;font-size: 0.36rem;font-weight:900;">
+                    <h2 style="color:rgb(108, 197, 255);font-size: 0.36rem;font-weight:900;">
                         <img src="/static/images/logo.png" style="width:1.4rem;height:0.9rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统
                     </h2>
                 </div>
