--- a/manipulate/templates/bigNav.html
+++ b/manipulate/templates/bigNav.html
@@ -30,7 +30,7 @@
     {% endblock %}
 
     <style type="text/css">
-        
+
     </style>
     <!-- head标签结束 -->
 
@@ -63,7 +63,8 @@
     <div style="width: 100%;height: 100%;padding:0 0.2rem;background:rgba(6, 11, 23, 0.68);">
         <div class="nav_left">
             <h2 style="color:#fff;font-size: 0.46rem;font-weight:900;">
-                <img src="../images/logo.png" style="width:1.4rem;height:1rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统
+                <!-- <img src="../images/logo.png" style="width:1.4rem;height:1rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统 -->
+                <img src="/static/images/realLogo.png" style="height:0.9rem;vertical-align: middle;">&nbsp;&nbsp;证券市场信息操纵洞察系统
             </h2>
         </div>
         <ul class="nav_middle">
