--- a/manipulate/templates/publicNav.html
+++ b/manipulate/templates/publicNav.html
@@ -60,7 +60,7 @@
 {% block header %}
 <div id="nav">
     <div style="width: 1200px;margin: 0 auto;overflow: hidden;width:90%;">
-        <div class="nav_left clearfix" style="">
+        <div class="nav_left clearfix">
             <div style="color:#fff;font-weight: 900;font-size:0.2rem;overflow: hidden;float:left;margin-right:.2rem;">
                 <!-- <img src="/static/images/newLogo.png" style="width:0.6rem;">&nbsp;&nbsp;证券市场信息操纵洞察系统 -->
                 <!-- <img src="/static/images/logo2.png" style="height:1.2rem;">&nbsp;&nbsp; -->
