--- a/manipulate/templates/publicNav.html
+++ b/manipulate/templates/publicNav.html
@@ -92,7 +92,7 @@
             <div class="r-1 pull-right" style="text-align: right;margin: 0.1rem 0;margin-left:.2rem;">
                 <span class="login"><i class="fa fa-user-circle-o"></i>&nbsp;登录</span>
                 <span class="registered"><i class="fa fa-drivers-license-o"></i>&nbsp;注册</span>
-                <span class="screen"><i class="fa fa-desktop"></i>&nbsp;大屏系统</span>
+                <span class="screen"><i class="fa fa-desktop"></i>&nbsp;大屏</span>
             </div>
             <div class="r-2 pull-right" style="margin:.1rem 0;">
                 <input type="text" class="searchContent" placeholder="请输入关键字"/>
