--- a/manipulate/templates/publicNav.html
+++ b/manipulate/templates/publicNav.html
@@ -94,7 +94,7 @@
                 <span class="registered"><i class="fa fa-drivers-license-o"></i>&nbsp;注册</span>
                 <span class="screen"><i class="fa fa-desktop"></i>&nbsp;大屏</span>
             </div>
-            <div class="r-2 pull-right" style="margin:.1rem 0;">
+            <div class="r-2 pull-right" style="margin:.1rem 0;display: none;">
                 <input type="text" class="searchContent" placeholder="请输入关键字"/>
                 <img id="searchGG" src="/static/images/search_btn.png" style="cursor: pointer;width:0.27rem;">
             </div>
